--- a/homework_3_task2/main.css
+++ b/homework_3_task2/main.css
@@ -1,3 +1,18 @@
+body {
+	text-align: center;
+	background-color: #999
+}
+
+.site_name {
+	font-size: 24pt;
+	text-align: center;
+}
+
+.logo {
+	text-align: center;
+	padding-bottom: 10px
+}
+
 .button {
 	padding: 8px 4px;
 	margin-top: 20mm;
@@ -6,4 +21,22 @@
 	background-color: #888;
 	color: #000;
 	text-decoration: none
+}
+
+.ssilki {
+	font-weight: 700;
+	font-size: 125%;
+	background-color: teal;
+	padding-top: 15px;
+	padding-bottom: 15px
+}
+
+.obuchenie {
+	background-color: #666
+}
+
+.zagolovok {
+	font-family: arial;
+	font-size: 18pt;
+	font-weight: 700
 }
